# Simple-command-generator-for-FFmpeg

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/project/: Input.hpp  Output.hpp  mkv.hpp  mp4.hpp  timeHandler.hpp  webm.hpp
src/: Input.cpp  Output.cpp  mkv.cpp  mp4.cpp  timeHandler.cpp  webm.cpp
